src/tests/testfiles/binary-operators/types-13.txt
Error at 2:5: Binary operator operands must have the same type (have int rvalue and float rvalue)
5 + 5.0;
^
